# gamecenter

./: .dockerignore  .gitignore  API.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: django.yml
api/: urls.py
backend/: admin.py  models.py  serializers.py  urls.py  views.py
backend/migrations/: 0001_initial.py  0002_curator_current_team.py  0002_curator_playerteam_station_task_delete_team_and_more.py  0002_playerteam_score.py  0003_remove_curator_current_team.py  0003_remove_playerteam_user_playerteam_stations_and_more.py  0004_alter_playerteam_current_station.py  0004_alter_playerteam_stations.py  0005_station_assignment.py  0006_curator_station_playerteam_time_station_points_and_more.py  0007_alter_playerteam_time.py  0008_alter_playerteam_time.py  0009_playerteam_current_station.py  0010_playerteam_time2.py  0011_remove_playerteam_time.py  0012_alter_station_time.py  0013_remove_playerteam_time2_playerteam_time.py  0014_rename_time_playerteam_start_time.py  0015_alter_playerteam_options_alter_playerteam_managers_and_more.py  0016_remove_playerteam_teamname_alter_playerteam_password.py  0017_alter_playerteam_options_alter_playerteam_managers_and_more.py  0018_playerteam_user.py  0019_remove_curator_name_remove_curator_password_and_more.py  0020_curator_name.py  0021_playerteam_teamname.py  0022_playerteamstation_alter_playerteam_stations.py  0023_alter_playerteamstation_unique_together.py
config/: settings.py  urls.py
